@@ -370,7 +370,7 @@ function read_scroll(object)
 		if not player.resist_blind then
 			set_blind(player.blind + 3 + randint(5))
 		end
-		if unlite_area(10, 3) then ident = TRUE end
+		if unlight_area(10, 3) then ident = TRUE end
 	elseif object.sval == SV_SCROLL_AGGRAVATE_MONSTER then
 		msg_print("There is a high pitched humming noise.")
 		aggravate_monsters(0)
@@ -438,7 +438,7 @@ function read_scroll(object)
 		if not recharge(60) then used_up = FALSE end
 		ident = TRUE
 	elseif object.sval == SV_SCROLL_LIGHT then
-		if lite_area(damroll(2, 8), 2) then ident = TRUE end		
+		if light_area(damroll(2, 8), 2) then ident = TRUE end		
 	elseif object.sval == SV_SCROLL_MAPPING then
 		map_area()
 		ident = TRUE
@@ -507,7 +507,7 @@ function use_staff(object)
 		if not player.resist_blind then
 			if set_blind(player.blind + 3 + randint(5)) then ident = TRUE end
 		end
-		if unlite_area(10, 3) then ident = TRUE end
+		if unlight_area(10, 3) then ident = TRUE end
 	elseif object.sval == SV_STAFF_SLOWNESS then
 		if set_slow(player.slow + randint(30) + 15) then ident = TRUE end
 	elseif object.sval == SV_STAFF_HASTE_MONSTERS then
@@ -537,11 +537,11 @@ function use_staff(object)
 		end
 
 		for i = 1, 9 do
-			lite_line(ddd[i])
+			light_line(ddd[i])
 		end
 		ident = TRUE
 	elseif object.sval == SV_STAFF_LITE then
-		if lite_area(damroll(2, 8), 2) then ident = TRUE end
+		if light_area(damroll(2, 8), 2) then ident = TRUE end
 	elseif object.sval == SV_STAFF_MAPPING then
 		map_area()
 		ident = TRUE
@@ -701,7 +701,7 @@ function aim_wand(object)
 		if wall_to_mud(dir) then ident = TRUE end
 	elseif sval == SV_WAND_LITE then
 		msg_print("A line of blue shimmering light appears.")
-		lite_line(dir)
+		light_line(dir)
 		ident = TRUE
 	elseif sval == SV_WAND_SLEEP_MONSTER then
 		if sleep_monster(dir) then ident = TRUE end
@@ -849,7 +849,7 @@ function zap_rod(object)
 		ident = TRUE
 		object.pval = 60
 	elseif sval == SV_ROD_ILLUMINATION then
-		if lite_area(damroll(2, 8), 2) then ident = TRUE end
+		if light_area(damroll(2, 8), 2) then ident = TRUE end
 		object.pval = 30
 	elseif sval == SV_ROD_MAPPING then
 		map_area()
@@ -899,7 +899,7 @@ function zap_rod(object)
 		object.pval = 30
 	elseif sval == SV_ROD_LITE then
 		msg_print("A line of blue shimmering light appears.")
-		lite_line(dir)
+		light_line(dir)
 		ident = TRUE
 		object.pval = 9
 	elseif sval == SV_ROD_SLEEP_MONSTER then
@@ -973,7 +973,7 @@ function activate_object(object)
 
 		if artifact.activation == ACT_ILLUMINATION then
 			msg_print(format("The %s wells with clear light...", o_name))
-			lite_area(damroll(2, 15), 3)
+			light_area(damroll(2, 15), 3)
 		elseif artifact.activation == ACT_MAGIC_MAP then
 			msg_print(format("The %s shines brightly...", o_name))
 			map_area()
@@ -1184,7 +1184,7 @@ function activate_object(object)
 			brand_bolts()
 		elseif artifact.activation == ACT_STARLIGHT then
 			msg_print(format("Your %s glows with the light of a thousand stars...", o_name))
-			for i = 1, 9 do strong_lite_line(ddd[k]) end
+			for i = 1, 9 do strong_light_line(ddd[k]) end
 		elseif artifact.activation == ACT_MANA_BOLT then
 			msg_print(format("Your %s glows white...", o_name))
 			success, dir = get_aim_dir()
